Revision history for Date-Holidays-RU

0.03    04 Mar  2015 liosha
        Data for 2005-2017

0.02    25 Nov  2014 Alexander Nalobin
        SYNOPSYS & MANIFEST fixed. 

0.01    25 Nov  2014 Alexander Nalobin
        First version, released on an unsuspecting world.
