@@ -1,7 +1,8 @@
 Revision history for Date-Holidays-RU
 
 0.03    04 Mar  2015 liosha
-        Data for 2005-2017
+        Data for 2005-2017.
+        is_short_business_day() sub added.
 
 0.02    25 Nov  2014 Alexander Nalobin
         SYNOPSYS & MANIFEST fixed. 
